# tropical-neural

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: algebra.rs  attention.rs  division.rs  lib.rs  network.rs  polynomial.rs
